--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <input id="zoom-to-area" type="button" value="Zoom">
     </div>
     <hr> -->
-    <div>
+    <!-- < --><!-- div>
       <span class="text"> Within </span>
       <select id="max-duration">
         <option value="10">10 min</option>
@@ -54,12 +54,17 @@
       <span class="text">of</span>
       <input id="search-within-time-text" type="text" placeholder="Ex: Your Home Address or Office Address">
       <input id="search-within-time" type="button" value="Go">
-      </div>
-      <hr>
+      </div> -->
+      <!-- <hr>
       <div>
         <span class="text">Search For More Nearby Schools</span>
         <input id="places-search" type="text" placeholder="EX: Private School">
         <input id="go-places" type="button" value="Go">
+      </div> -->
+      <div>
+        <span class="text">Filter Locations</span>
+        <input type="text" placeholder="Filter" data-bind="textInput: query">
+        <input type="button" value="Go">
       </div>
       <hr>
       <div>
@@ -72,15 +77,7 @@
     </div>
     <div id="map">
     </div>
-    <script>
-      var map;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: 39.952584, lng: -75.165222},
-          zoom: 15
-        });
-      }
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-ZS76AM7sWAayKwB8233x-gjqVCl5Dto&callback=initMap&libraries=places,drawing"
     async defer></script>
