--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  <div class="container">
   <div class="options-box">
     <h1>PK/K-12 Schools in Philadelphia and Surrounding Areas</h1>
-    <h3>For the parent who values Private, Independent, and Quacker Schools.</h3>
+    <h3>For the parent who values Private, Independent, and Quaker Schools.</h3>
     <div>
       <input id="show-listings" type="button" value="Show Listings">
       <input id="hide-listings" type="button" value="Hide Listings">
