--- a/index.html
+++ b/index.html
@@ -1,66 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <link rel="stylesheet" type="text/css" href="style.css" /> 
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Private Schools in Philadelphia, PA Map</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
-    <style>
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-      #map { 
-      bottom: 0px;
-      height: 100%;
-      left: 362px;
-      position: absolute;
-      right: 0px; 
-    }
-    </style>
+    </style> -->
   </head>
   <body>
  <div class="container">
   <div class="options-box">
     <h1>PK/K-12 Schools in Philadelphia and Surrounding Areas</h1>
-    <h3>For the parent who values Private, Independent, and Quaker Schools.</h3>
+    <h3>For the parent who values Private, Independent, and Quaker school education.</h3>
     <div>
       <input id="show-listings" type="button" value="Show Listings">
       <input id="hide-listings" type="button" value="Hide Listings">
       <hr>
-      <span class="text"> Draw a shape to search within the map to find schools!</span>
-      <input id="toggle-drawing" type="button" value="Drawing Tools">
     </div>
-    <hr>
-    <!-- <div>
-      <input id="zoom-to-area-text" type="text" placeholder="Enter Your Favorite Area!">
-      <input id="zoom-to-area" type="button" value="Zoom">
-    </div>
-    <hr> -->
-    <!-- < --><!-- div>
-      <span class="text"> Within </span>
-      <select id="max-duration">
-        <option value="10">10 min</option>
-        <option value="15">15 min</option>
-        <option value="30">30 min</option>
-        <option value="60">1 hour</option>
-      </select>
-      <select id="mode">
-        <option value="DRIVING">drive</option>
-        <option value="WALKING">walk</option>
-        <option value="TRANSIT">transit ride</option>
-      </select>
-      <span class="text">of</span>
-      <input id="search-within-time-text" type="text" placeholder="Ex: Your Home Address or Office Address">
-      <input id="search-within-time" type="button" value="Go">
-      </div> -->
-      <!-- <hr>
-      <div>
-        <span class="text">Search For More Nearby Schools</span>
-        <input id="places-search" type="text" placeholder="EX: Private School">
-        <input id="go-places" type="button" value="Go">
-      </div> -->
       <div>
         <span class="text">Filter Locations</span>
         <input type="text" placeholder="Filter" data-bind="textInput: query">
