--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
  <div class="container">
-  <img src="nav.svg" class="list-toggle" data-bind="click: listToggle"/>
+  <img src="nav.svg" class="list-toggle" alt="Show or hide list view" data-bind="click: listToggle"/>
   <div class="options-box" id="list"  data-bind="css: { closed: !open() }">
     <h1>PK/K-12 Schools in Philadelphia and Surrounding Areas</h1>
     <h3>For the parent who values Private, Independent, and Quaker school education.</h3>
@@ -34,6 +34,7 @@
         </ul>
     </div>
     <div id="map">
+    </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
